// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Render buttonText correctly 1`] = `
<button
  className=""
  type="button"
>
  ohHi
</button>
`;

exports[`Button component Use className prop 1`] = `
<button
  className="someClass"
  type="button"
>
  Oh hi
</button>
`;

exports[`Button component Use default type "button" if no type is provided 1`] = `
<button
  className=""
  type="button"
>
  Oh hi
</button>
`;

exports[`Button component Use handleClick prop 1`] = `
<button
  className=""
  onClick={[Function]}
  type="button"
>
  Oh hi
</button>
`;

exports[`Button component Use specified type when it is provided 1`] = `
<button
  className=""
  type="submit"
>
  Oh hi
</button>
`;
